--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
             </li>
           </ul>
           <ul class="products-list list">
-            <li class="products-list__item">
+            <li class="products-list__item ">
               <a class="produkts-list__link link" href=""> 
                 <div class="produkts-list__box">
                   <picture>
@@ -165,7 +165,7 @@
                 </div>
                 </div>
                
-                <div class="products-list__box-below products-list__box-below_padding">
+                <div class="products-list__box-below">
                   <h2 class="products-list__title">Технокряк</h2>
                   <p class="products-list__text">Веб-сайт</p>
                 </div>
