--- a/index.html
+++ b/index.html
@@ -169,13 +169,14 @@
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="work-list__item">
-              <img
-                class="work-list__pic"
-                src="./images/img.jpg"
-                width="370"
-                height="294"
-                alt="мужчина пишет код на клавиатуре"
-              />
+              <picture>
+              <source srcset="./images/picture1-desktop.webp 1x, ./images/picture1-desktop@2x.webp 2x" media="(min-width: 1200px)" type="image/webp">
+              <source srcset="./images/picture1-desktop.jpg 1x, ./images/picture1-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <img class="work-list__pic"
+              src="./images/person1-mobile.jpg"
+              alt="мужчина пишет код на клавиатуре"
+            />
+            </picture>
               <div class="work-list__over-container">
                 <p class="work-list__over-text">
                   Десктопные приложения
@@ -183,13 +184,14 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img
-                class="work-list__pic"
-                src="./images/img1.jpg"
-                width="370"
-                height="294"
+              <picture>
+                <source srcset="./images/picture2-desktop.webp 1x, ./images/picture2-desktop@2x.webp 2x" media="(min-width: 1200px)" type="image/webp">
+                <source srcset="./images/picture2-desktop.jpg 1x, ./images/picture2-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <img class="work-list__pic"
+                src="./images/person1-mobile.jpg"
                 alt="женщина держит телефон в руках и смотрит на экран ноутбука"
               />
+              </picture>
               <div class="work-list__over-container">
                 <p class="work-list__over-text">
                   Мобильные приложения
@@ -197,13 +199,14 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img
-                class="work-list__pic"
-                src="./images/img2.jpg"
-                width="370"
-                height="294"
+              <picture>
+                <source srcset="./images/picture2-desktop.webp 1x, ./images/picture2-desktop@2x.webp 2x" media="(min-width: 1200px)" type="image/webp">
+                <source srcset="./images/picture2-desktop.jpg 1x, ./images/picture2-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <img class="work-list__pic"
+                src="./images/person1-mobile.jpg"
                 alt="планшет с изображением палитры красок в руках человека"
               />
+              </picture>
               <div class="work-list__over-container">
                 <p class="work-list__over-text">
                   Дизайнерские решения
