--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </ul>
           <ul class="conacts-list">
             <li class="contacts-list__item list">
-              <a class="contacts-list__tel link" href="tel:+38 0961111111">+38 096 111 11 11</a></li>
+              <a class="contacts-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li class="contacts-list__item list">
               <a class="contacts-list__mail link" href="maito:info@devstudio.com">info@devstudio.com</a></li>
           </ul>
@@ -227,8 +227,8 @@
                 <source srcset="./images/person1-desktop.jpg 1x, ./images/person1-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                 <source srcset="./images/person1-tablet.webp 1x, ./images/person1-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                 <source srcset="./images/person1-tablet.jpg 1x, ./images/person1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/person1-mobile.webp 1x, ./images/person1-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                <source srcset="./images/person1-mobile.jpg 1x, ./images/person1-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                <source srcset="./images/person1-mobile.webp 1x, ./images/person1-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                <source srcset="./images/person1-mobile.jpg 1x, ./images/person1-mobile@2x.jpg 2x " media="(max-width: 767px)">
                 <img class="team-list__pic"
                 src="./images/person1-mobile.jpg"
                 alt="улыбающийся мужчина в очках"
@@ -260,8 +260,8 @@
                 <source srcset="./images/person2-desktop.jpg 1x, ./images/person2-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                 <source srcset="./images/person2-tablet.webp 1x, ./images/person2-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                 <source srcset="./images/person2-tablet.jpg 1x, ./images/person2-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/person2-mobile.webp 1x, ./images/person2-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                <source srcset="./images/person2-mobile.jpg 1x, ./images/person2-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                <source srcset="./images/person2-mobile.webp 1x, ./images/person2-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                <source srcset="./images/person2-mobile.jpg 1x, ./images/person2-mobile@2x.jpg 2x " media="(max-width: 767px)">
                 <img class="team-list__pic"
                 src="./images/person2-mobile.jpg"
                 alt="улыбающаяся женщина в очках"
@@ -292,8 +292,8 @@
                 <source srcset="./images/person3-desktop.jpg 1x, ./images/person3-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                 <source srcset="./images/person3-tablet.webp 1x, ./images/person3-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                 <source srcset="./images/person3-tablet.jpg 1x, ./images/person3-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/person3-mobile.webp 1x, ./images/person3-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                <source srcset="./images/person3-mobile.jpg 1x, ./images/person3-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                <source srcset="./images/person3-mobile.webp 1x, ./images/person3-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                <source srcset="./images/person3-mobile.jpg 1x, ./images/person3-mobile@2x.jpg 2x " media="(max-width: 767px)">
                 <img class="team-list__pic"
                 src="./images/person3-mobile.jpg"
                 alt="улыбающийся мужчина"
@@ -322,8 +322,8 @@
                 <source srcset="./images/person4-desktop.jpg 1x, ./images/person4-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                 <source srcset="./images/person4-tablet.webp 1x, ./images/person4-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                 <source srcset="./images/person4-tablet.jpg 1x, ./images/person4-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/person4-mobile.webp 1x, ./images/person4-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                <source srcset="./images/person4-mobile.jpg 1x, ./images/person4-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                <source srcset="./images/person4-mobile.webp 1x, ./images/person4-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                <source srcset="./images/person4-mobile.jpg 1x, ./images/person4-mobile@2x.jpg 2x " media="(max-width: 767px)">
                 <img class="team-list__pic"
                 src="./images/person4-mobile.jpg"
                 alt="улыбающийся мужчина в очках"
@@ -390,7 +390,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer section">
+    <footer class="footer">
       <div class="container footer-content">
         <div class="address-content">
           <a class="logo footer__logo link" href="" lang="en"
