--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
-  </head>
-  <body>
     <header class="page-header">
       <div class="container page-header__container">
         <nav class="navigation">
@@ -89,7 +87,7 @@
           </ul>
           <ul class="conacts-list">
             <li class="contacts-list__item list">
-              <a class="contacts-list__tel link" href="tel:+38 0961111111">+38 096 111 11 11</a></li>
+              <a class="contacts-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li class="contacts-list__item list">
               <a class="contacts-list__mail link" href="maito:info@devstudio.com">info@devstudio.com</a></li>
           </ul>
@@ -148,8 +146,8 @@
                     <source srcset="./images/project1-desktop.jpg 1x, ./images/project1-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project1-tablet.webp 1x, ./images/project1-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project1-tablet.jpg 1x, ./images/project1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project1-mobile.webp 1x, ./images/project1-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project1-mobile.jpg 1x, ./images/project1-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project1-mobile.webp 1x, ./images/project1-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project1-mobile.jpg 1x, ./images/project1-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project1-mobile.jpg"
                     alt="ноутбук с изображением веб-сайта"
@@ -179,8 +177,8 @@
                     <source srcset="./images/project2-desktop.jpg 1x, ./images/project2-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project2-tablet.webp 1x, ./images/project2-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project2-tablet.jpg 1x, ./images/project2-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project2-mobile.webp 1x, ./images/project2-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project2-mobile.jpg 1x, ./images/project2-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project2-mobile.webp 1x, ./images/project2-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project2-mobile.jpg 1x, ./images/project2-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project2-mobile.jpg"
                     alt="два баскетболиста с мячем"
@@ -199,7 +197,7 @@
                   <h2 class="products-list__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="product-list-item-text">Дизайн</p>
+                  <p class="products-list__text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -211,8 +209,8 @@
                     <source srcset="./images/project3-desktop.jpg 1x, ./images/project3-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project3-tablet.webp 1x, ./images/project3-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project3-tablet.jpg 1x, ./images/project3-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project3-mobile.webp 1x, ./images/project3-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project3-mobile.jpg 1x, ./images/project3-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project3-mobile.webp 1x, ./images/project3-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project3-mobile.jpg 1x, ./images/project3-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project3-mobile.jpg"
                     alt="логотип ресторана Seafood"
@@ -241,8 +239,8 @@
                     <source srcset="./images/project4-desktop.jpg 1x, ./images/project4-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project4-tablet.webp 1x, ./images/project4-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project4-tablet.jpg 1x, ./images/project4-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project4-mobile.webp 1x, ./images/project4-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project4-mobile.jpg 1x, ./images/project4-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project4-mobile.webp 1x, ./images/project4-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project4-mobile.jpg 1x, ./images/project4-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project4-mobile.jpg"
                     alt="наушники"
@@ -271,8 +269,8 @@
                     <source srcset="./images/project5-desktop.jpg 1x, ./images/project5-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project5-tablet.webp 1x, ./images/project5-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project5-tablet.jpg 1x, ./images/project5-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project5-mobile.webp 1x, ./images/project5-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project5-mobile.jpg 1x, ./images/project5-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project5-mobile.webp 1x, ./images/project5-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project5-mobile.jpg 1x, ./images/project5-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project5-mobile.jpg"
                     alt="две коробки с надписями"
@@ -302,8 +300,8 @@
                     <source srcset="./images/project6-desktop.jpg 1x, ./images/project6-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project6-tablet.webp 1x, ./images/project6-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project6-tablet.jpg 1x, ./images/project6-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project6-mobile.webp 1x, ./images/project6-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project6-mobile.jpg 1x, ./images/project6-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project6-mobile.webp 1x, ./images/project6-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project6-mobile.jpg 1x, ./images/project6-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project6-mobile.jpg"
                     alt="монитор с изображением веб-сайта"
@@ -322,7 +320,7 @@
                   <h2 class="products-list__title">
                     Inspiration has no Borders
                   </h2>
-                  <p class="product-list-item-text">Веб-сайт</p>
+                  <p class="products-list__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -334,8 +332,8 @@
                     <source srcset="./images/project7-desktop.jpg 1x, ./images/project7-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project7-tablet.webp 1x, ./images/project7-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project7-tablet.jpg 1x, ./images/project7-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project7-mobile.webp 1x, ./images/project7-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project7-mobile.jpg 1x, ./images/project7-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project7-mobile.webp 1x, ./images/project7-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project7-mobile.jpg 1x, ./images/project7-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project7-mobile.jpg"
                     alt="открытая книга"
@@ -355,7 +353,7 @@
                   <h2 class="products-list__title">
                     Издание Limited Edition
                   </h2>
-                  <p class="product-list-item-text">Дизайн</p>
+                  <p class="products-list__text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -367,8 +365,8 @@
                     <source srcset="./images/project8-desktop.jpg 1x, ./images/project8-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project8-tablet.webp 1x, ./images/project8-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project8-tablet.jpg 1x, ./images/project8-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project8-mobile.webp 1x, ./images/project8-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project8-mobile.jpg 1x, ./images/project8-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project8-mobile.webp 1x, ./images/project8-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project8-mobile.jpg 1x, ./images/project8-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project8-mobile.jpg"
                     alt="лейба с надпиью"
@@ -397,8 +395,8 @@
                     <source srcset="./images/project9-desktop.jpg 1x, ./images/project9-desktop@2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/project9-tablet.webp 1x, ./images/project9-tablet@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                     <source srcset="./images/project9-tablet.jpg 1x, ./images/project9-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./images/project9-mobile.webp 1x, ./images/project9-mobile@2x.webp 2x " media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/project9-mobile.jpg 1x, ./images/project9-mobile@2x.jpg 2x " media="(min-width: 320px)">
+                    <source srcset="./images/project9-mobile.webp 1x, ./images/project9-mobile@2x.webp 2x " media="(max-width: 767px)" type="image/webp">
+                    <source srcset="./images/project9-mobile.jpg 1x, ./images/project9-mobile@2x.jpg 2x " media="(max-width: 767px)">
                     <img class="product-list__pic"
                     src="./images/project9-mobile.jpg"
                     alt="ноутбук с изображением веб-сайта"
@@ -423,7 +421,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer section">
+    <footer class="footer">
       <div class="container footer-content">
         <div class="address-content">
           <a class="logo footer__logo link" href="" lang="en"
